--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Eurozahl"
         tools:targetApi="31">
+
+        <receiver android:name=".core.widget.EurozahlWidgetReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/eurozahl_widget" />
+        </receiver>
+
         <activity
             android:name=".ui.view.MainActivity"
             android:exported="true"
